"Added details in config, added reminder to nav."

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: ymdatta 
+bio: A Guy interested in Computers and StarTrek
 
 # twitter summary info
-description: A blog about technology and stuff related
+#description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
 # better with square images
@@ -12,12 +12,12 @@ picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
-resume-external: true
-resume-url: https://google.com/?q=my+resume
+#resume: true
+#resume-external: true
+#resume-url: https://google.com/?q=my+resume
 
-url: https://koppl.in/indigo
-# your url: http://USERNAME.github.io
+#url: https://koppl.in/indigo
+your url: http://ymdatta.github.io
 
 permalink: /:title/
 
@@ -34,8 +34,8 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+#facebook: myfacebook
+#twitter: mytwitter
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
@@ -47,24 +47,24 @@ github: mygithub
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+#medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: ymdatta@protonmail.com
 
 authors:
-    johndoe:
-        name: John Doe
-        bio: A Man who travels the world eating noodles
+    #jamesfoster:
+        #name: James Foster
+        #bio: A Man who develops software with coffee
+        #external-image: false
+        #picture: assets/images/james.jpg
+        #twitter: jamesfoster
+    ymdatta:
+        name: Mohana Datta Y
+        bio:  A Guy interested in Computers and StarTrek.
         external-image: false
         picture: assets/images/profile.jpg
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+        twitter: ymdatta
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
@@ -81,6 +81,7 @@ projects: true
 # if you don't need "about" or "blog", comment them out below
 about: true
 blog: true
+reminder: true
 
 # do you want to show the "read time" of the posts?
 read-time: true
